bk_ida/gccida/g3/decode_asm_operands
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:1977:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *modes) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2014:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v41; // rbx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2076:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v103; // r8 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2122:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v149; // r8 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2131:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v158; // r8 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2158:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v185; // rdi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2184:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v211; // rcx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2185:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v212; // rdx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2197:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v14 = ( __int64)body[1]; 
                ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2399:44: error: use of undeclared identifier 'xmm'; did you mean 'mm'?
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x748370); 
                                           ^~~
                                           mm
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2083:6: note: 'mm' declared here
rtx *mm; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2399:47: error: invalid operands to binary expression ('const __m128i *' and 'short *')
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x748370); 
                        ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2400:43: error: use of undeclared identifier 'xmm'; did you mean 'mm'?
v171 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x748360); 
                                          ^~~
                                          mm
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2083:6: note: 'mm' declared here
rtx *mm; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2400:46: error: invalid operands to binary expression ('const __m128i *' and 'short *')
v171 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x748360); 
                       ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2401:43: error: use of undeclared identifier 'xmm'; did you mean 'mm'?
v172 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x6B6D50); 
                                          ^~~
                                          mm
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2083:6: note: 'mm' declared here
rtx *mm; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2401:46: error: invalid operands to binary expression ('const __m128i *' and 'short *')
v172 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x6B6D50); 
                       ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2402:28: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
v173 = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v15, ( __m128i)( unsigned __int64)v15); 
                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2402:62: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
v173 = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)v15, ( __m128i)( unsigned __int64)v15); 
                                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2403:25: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v174 = _mm_cmpgt_epi32( ( __m128i)0LL, si128); 
                        ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/recog.c:2416:33: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
_mm_mul_epu32( _mm_cmpgt_epi32( ( __m128i)0LL, v176), si128), 
                                ^~~~~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/decode_asm_operands/src/obj/recog.o] Error 1
